# capstone-display

./: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
config/: config.compose.yml  config.dev.yml  config.yml
src/capstone_display/: __init__.py  config.py  http_server.py  main.py
test/: test_config.py  test_main.py
